# PChat

./: .hgignore  CMakeLists.txt  COPYING.rtf  Makefile.am  Makefile.win32  README  config.h  config.h.cmake  configure.ac  configure.in  faq.html  pchat.desktop  pchat.spec  resource.h
Spell/share/myspell/dicts/: bg_BG.aff  bg_BG.dic  ca_ES.aff  ca_ES.dic  cs_CZ.aff  da_DK.dic  de_AT.aff  de_AT.dic  de_CH.aff  de_CH.dic  de_DE.aff  de_DE.dic  el_GR.aff  el_GR.dic  eo_ALL.dic  es_ES.dic  fo_FO.aff  fo_FO.dic  fr.aff  fr.dic  gd_GB.aff  gd_GB.dic  gl_ES.dic  gv_GB.dic  he.aff  lt_LT.dic  lv_LV.aff  nl.dic  pl.aff  pl.dic  pt_BR.aff  sk_SK.aff  (+2 more)
data/man/: pchat.1
data/pkgconfig/: Makefile  Makefile.am  xchat-plugin.pc.in
plugins/: plugin-conf.in  plugin20.html
plugins/cap_sasl/: cap_sasl.c  cap_sasl.def  cap_sasl.rc  cap_sasl.vcxproj  cap_sasl.vcxproj.filters
plugins/dns/: dns.c  dns.vcxproj
plugins/exec/: exec.vcxproj
plugins/lua/: lua.vcxproj
plugins/mailcheck/: Makefile.am
plugins/perl/: Makefile.am  perl-512.vcxproj  perl-514.vcxproj  perl-516.vcxproj
plugins/python/: Makefile.am  python.vcxproj
plugins/sasl/: Makefile.am  sasl.c  sasl.vcxproj
plugins/tcl/: tcl.vcxproj
plugins/winamp/: winamp.vcxproj
po/: compile-po-files.bat
src/: Makefile.am
src/common/: Makefile.am  cfgfiles.c  common.vcxproj  ctcp.c  inbound.c  modes.c  outbound.c  plugin.c  server.c  servlist.c  text.c  textenums.h  textevents.h  textevents.in  tree.h  url.c  url.h  userlist.c  userlist.h  util.c  util.h  xchat.c  xchat.h
src/common/dbus/: Makefile.am  dbus-client.c
src/dirent/: dirent.vcxproj
src/fe-gtk/: Makefile.am  about.c  ascii.c  banlist.c  chanlist.c  chanview-tabs.c  chanview-tree.c  custom-list.c  custom-list.h  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.h  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  gtkutil.c  ignoregui.c  joind.c  maingui.c  menu.c  notifygui.c  pixmaps.c  pixmaps.h  plugin-tray.c  plugingui.c  rawlog.c  search.c  servlistgui.c  setup.c  sexy-spell-entry.c  textgui.c  urlgrab.c  userlistgui.c  xchat.exe.manifest  xchat.rc  xtext.c  xtext.h
src/fe-text/: Makefile.am  fe-text.c  fe-text.vcxproj  fe-text.vcxproj.filters
src/pixmaps/: Makefile.am  book.xcf  inline_pngs.h  pixmaps.vcxproj  pixmaps.vcxproj.filters
win32/: pchat.props  pchat.sln  release-src.bat
win32/copy/: copy.vcxproj
win32/installer/: installer.vcxproj  installer.vcxproj.filters  installer_64.nsi  pchat-x64.nsi  pchat-x86.nsi
win32/nls/: nls.vcxproj
