## Process this file with automake to produce Makefile.in

SUBDIRS = po intl src plugins

EXTRA_DIST = autogen.sh HACKING INSTALL.w32 faq.html pchat.png \
		pchat.desktop pchat.spec pchat.ico

icon_DATA = pchat.png
icondir = $(datadir)/pixmaps

util_DATA = pchat.desktop
utildir = $(datadir)/applications

ACLOCAL_AMFLAGS = -I m4
